...
            "value": "Schließen"
          }
        },
        "fr": {
          "stringUnit": {
            "state": "translated",
            "value": "Fermer"
          }
        }
      }
    },
    "Close replay": {
      "localizations": {
...
            "state": "translated",
            "value": "Vitesse max"
          }
        }
      }
    },
    "Mes voiles": {
      "extractionState": "stale",
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Meine Schirme"
...
            "state": "translated",
            "value": "Statistiques de vol"
          }
        }
      }
    },
    "Stats": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Statistik"
          }
...
